@@ -3,6 +3,10 @@
 	  ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
 	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/tdo.c, lib/oci8/oci8.rb:
 	    change arguments of internal bind-init functions.
+	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h,
+	  ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
+	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/tdo.c:
+	    split bind-init callback to init and init_elem.
 
 2006-12-07  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c, ext/oci8/tdo.c:
